# hubb-one-assist-backend-saas-v1-replit

./: .env.example  .replit  .replit.api  .replit.uvicorn  README.md  app.py  asgi.py  cookies.txt  fastapi_app.py  flask_app.py  main.py  main_flask.py  main_wsgi.py  package-lock.json  package.json  pyproject.toml  replit_deploy.py  rules.md  run-fastapi.sh  run-gunicorn-uvicorn.sh  run-uvicorn.sh  run.py  run.sh  simple_health.py  simple_server.py  single-main.py  start-api.sh  start-fastapi.sh  start-gunicorn-uvicorn.sh  start-server.sh  start-uvicorn.sh  start.py  tarefas.md  webapp.py  wsgi.py  wsgi_adapter.py  wsgi_app.py  wsgi_to_asgi.py
alembic/: README  __init__.py  env.py
app/: main.py  wsgi_proxy.py
attached_assets/: Pasted--Diagn-stico-consolidado-O-login-funciona-Ou-seja-POST-auth-login-com-credentials-include--1746886744911.txt  Pasted--Etapas-da-FASE-2-Etapa-Tarefa-Descri-o-2-1-Padronizar-PatientRepository-como-depend-ncia-Injetar-1747684344344.txt  Pasted--Etapas-para-desativar-o-m-dulo-ArduinoDevice-com-seguran-a-1-Remover-a-inclus-o-do-router-p-bli-1747073337173.txt  Pasted--FASE-3-Entidades-Ricas-e-Testes-Unit-rios-com-FakeRepository-Objetivos-Transformar-as-entida-1747684414212.txt  Pasted--FASE-4-Refatora-o-do-Dom-nio-User-Objetivo-Aplicar-os-mesmos-princ-pios-j-utilizados-em-Pa-1747684485235.txt  Pasted--Objetivo-Aplicar-DDD-SOLID-e-Clean-Code-ao-backend-atual-FastAPI-SQLAlchemy-Pydantic-modu-1747683994303.txt  Pasted--Parte-2-Buscar-Paciente-por-ID-com-UseCase-app-application-use-cases-get-patient-py-python-C-1747684226742.txt  (+62 more)
backend/: wsgi.py  (+5 more)
(+257 files in other folders)
